--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -10,8 +10,8 @@
 
 [platformio]
 ;default_envs = m5stack-atoms3
-;default_envs = m5stack-atom
-default_envs = seeed_xiao_rp2040
+default_envs = m5stack-atom
+;default_envs = seeed_xiao_rp2040
 
 [env:m5stack-atoms3]
 platform = espressif32
