--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -9,8 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;default_envs = m5stack-atoms3
-default_envs = m5stack-atom
+default_envs = m5stack-atoms3
+;default_envs = m5stack-atom
 ;default_envs = seeed_xiao_rp2040
 
 [env:m5stack-atoms3]
