available to use USB Serial on ATOM S3

--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -17,8 +17,11 @@ default_envs = m5stack-atoms3
 platform = espressif32
 board = m5stack-atoms3
 framework = arduino
-build_flags = -D INI_ATOMS3
+build_flags = -D INI_ATOMS3 -D ARDUINO_USB_MODE=1 -D ARDUINO_USB_CDC_ON_BOOT=1    
 lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
+monitor_speed = 115200
+
+
 
 [env:m5stack-atom]
 platform = espressif32
@@ -26,6 +29,7 @@ board = m5stack-atom
 framework = arduino
 build_flags = -D INI_ATOM
 lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
+monitor_speed = 115200
 
 [env:seeed_xiao_rp2040]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -35,3 +39,4 @@ board_build.filesystem_size = 0.5m
 framework = arduino
 build_flags = -D INI_XIAO_RP2040
 lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
+monitor_speed = 115200
