--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -12,6 +12,7 @@
 default_envs = m5stack-atoms3
 ;default_envs = m5stack-atom
 ;default_envs = seeed_xiao_rp2040
+;default_envs = rp2040_zero
 
 [env:m5stack-atoms3]
 platform = espressif32
@@ -36,5 +37,15 @@ board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m
 framework = arduino
 build_flags = -D INI_XIAO_RP2040
+lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
+monitor_speed = 115200
+
+[env:rp2040_zero]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = seeed_xiao_rp2040
+board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
+framework = arduino
+build_flags = -D INI_RP2040_ZERO
 lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
 monitor_speed = 115200
