fix a bug for Rp2040_zero

--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -9,10 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = m5stack-atoms3
+;default_envs = m5stack-atoms3
 ;default_envs = m5stack-atom
 ;default_envs = seeed_xiao_rp2040
-;default_envs = rp2040_zero
+;default_envs = seeed_xiao
+default_envs = rp2040_zero
 
 [env:m5stack-atoms3]
 platform = espressif32
@@ -37,6 +38,14 @@ board_build.core = earlephilhower
 board_build.filesystem_size = 0.5m
 framework = arduino
 build_flags = -D INI_XIAO_RP2040
+lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
+monitor_speed = 115200
+
+[env:seeed_xiao]
+platform = atmelsam
+board = seeed_xiao
+framework = arduino
+build_flags = -D INI_XIAO
 lib_deps = adafruit/Adafruit NeoPixel@^1.11.0
 monitor_speed = 115200
 
