skip session key

--- a/src/forPlatformIO/DistanceSensorPIO/platformio.ini
+++ b/src/forPlatformIO/DistanceSensorPIO/platformio.ini
@@ -9,10 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = m5stack-atoms3
+;default_envs = m5stack-atoms3
 ;default_envs = m5stack-atom
 ;default_envs = seeed_xiao_rp2040
-;default_envs = seeed_xiao
+default_envs = seeed_xiao
 ;default_envs = rp2040_zero
 
 [env:m5stack-atoms3]
